implemented truffle and swagger
